Runnable JAR funtzionatzeko aldaketak